--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,21 @@
 <h1>Posts#index</h1>
 
 <% @posts.each do |post| %>
+
   <hr>
+<p><span>メール</span><%=link_to post.user.email, user_path(post.user.id) %></p>
 <p>ブログ内容▼</p>
   <p><%=link_to post.body, post_path(post.id) %></p>
+
+
+  <% if user_signed_in? %>
+    <% if post.favorited_by?(current_user) %> 
+        <p>いいね解除▼</p>
+        <p><%=link_to post.favorites.count, post_favorites_path(post.id), method: :delete %></p>
+    <% else %>
+        <p>いいね登録▼</p>
+        <p><%=link_to post.favorites.count, post_favorites_path(post.id), method: :post %></p>
+    <% end %>
+<% end %>
+
 <% end %>
