--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Posts#show</h1>
 
-<p><span>email: </span><%= @user.email %></p>
-<p><span>ブログ記事</span><%= @post.body %></p>
+<p>email▼</p>
+<p><%= @user.email %></p> 
+<p>ブログ内容▼</p>
+<p><%= @post.body %></p>
+
+
