--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,18 @@
         <p>いいね登録▼</p>
         <p><%=link_to post.favorites.count, post_favorites_path(post.id), method: :post %></p>
     <% end %>
-<% end %>
+
+    <% if current_user != post.user %>
+        <% if post.user.followed_by?(current_user) %>
+            <p><%=link_to "フォロー済み", user_relationships_path(post.user.id), method: :delete %></p>
+        <% else %>
+            <p><%=link_to "フォローする", user_relationships_path(post.user.id), method: :post %></p>
+        <% end %>
+    <% end %>
+
+  <% else %>
+    <p>お気に入り数▼</p>
+    <p><%= post.favorites.count %></p>
+  <% end %>
 
 <% end %>
