--- a/app/views/layouts/_stats.html.erb
+++ b/app/views/layouts/_stats.html.erb
@@ -5,7 +5,7 @@
     <span id="following">
       <%= @user.following.count %>
     </span>
-    ふぉろー
+    フォロー
   <% end %>
   
   <%= link_to followers_user_path(@user), class: "col-6" do %>
@@ -13,7 +13,7 @@
       <span id="followers">
         <%= @user.followers.count %>
       </span>
-      ふぉろわー
+      フォロワー
     </div>
   <% end %>
 </div>
