--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,6 +6,8 @@
             </div>
           <% end %>
 
+
+
             <%= form_for @post do |f| %>
 
             <h3>タイトル</h3>
@@ -19,77 +21,132 @@
             <%= f.text_area :body, size: "120x3" %>
 <br>
             <%= f.submit "投稿", class: "btn btn-primary" %>
-            <% end %>
-
-
+            
 
 
 
 <div class="cp_tab">
 	<input type="radio" name="cp_tab" id="tab1_1" aria-controls="first_tab01" checked>
-	<label for="tab1_1">First Tab</label>
+	<label for="tab1_1"><h3>1 タブ</h3></label>
 	<input type="radio" name="cp_tab" id="tab1_2" aria-controls="second_tab01">
-	<label for="tab1_2">Second Tab</label>
+	<label for="tab1_2"><h3>2 タブ</h3></label>
 	<input type="radio" name="cp_tab" id="tab1_3" aria-controls="third_tab01">
-	<label for="tab1_3">Third Tab</label>
+	<label for="tab1_3"><h3>3 タブ</h3></label>
 	<input type="radio" name="cp_tab" id="tab1_4" aria-controls="force_tab01">
-	<label for="tab1_4">Force Tab</label>
+	<label for="tab1_4"><h3>4 タブ</h3></label>
+    <input type="radio" name="cp_tab" id="tab1_5" aria-controls="five_tab01">
+	<label for="tab1_5"><h3>5 タブ</h3></label>
 	<div class="cp_tabpanels">
 		<div id="first_tab01" class="cp_tabpanel">
 		<h3>見出し</h3>
-		<p>
-            <%= form_for @post do |f| %>
-            <%= f.text_field :second_title, size: "120x3" %>
-        </p>
-        <h3>画像</h3>
-            <center><%= f.file_field :image %></center>
-        <h3>記事</h3>
-		<p>
-            <%= f.text_area :second_body, size: "120x3" %>
-        </p>
-        <h3>リンク</h3>
-		<p>
-            <%= f.text_field :second_link, size: "120x3" %>
-        </p>
-<br>
-<br>
-        <p>
             
+            <%= f.text_field :second_title, size: "120x3" %>
+            
+        <h3>画像</h3>
+            <center><%= f.file_field :second_image %></center>
+           
+        <h3>記事</h3>
+            
+            <%= f.text_area :second_body, size: "120x3" %>
+            
+        <h3>リンク</h3>
+            
+            <%= f.text_field :second_link, size: "120x3" %>
+<br>
+<br>
            <%= f.submit "投稿", class: "btn btn-primary" %>
-        </p>
             
 		</div>
 		<div id="second_tab01" class="cp_tabpanel">
+		<h3>見出し</h3>
             
-		<h2>タイトル</h2>
-		<p>
-            <%= form_with model: @post do |f| %>
-            <%= f.text_field :two_title, size: "10x10" %>
+            <%= f.text_field :third_title, size: "120x3" %>
+            
+        <h3>画像</h3>
+            <center><%= f.file_field :third_image %></center>
+           
+        <h3>記事</h3>
+            
+            <%= f.text_area :third_body, size: "120x3" %>
+            
+        <h3>リンク</h3>
+            
+            <%= f.text_field :third_link, size: "120x3" %>
+<br>
+<br>
            <%= f.submit "投稿", class: "btn btn-primary" %>
-          <% end %>
-            </p>
-        <h2>記事</h2>
-		<p>
-            <%= form_with model: @post do |f| %>
-            <%= f.text_area :two_boby, size: "40x3" %>
-            <%= f.submit "投稿", class: "btn btn-primary" %>
-          <% end %>
-        <h2>リンク</h2>
-		<p>
-            <%= form_with model: @post do |f| %>
-            <%= f.text_field :two_link %>
-           <%= f.submit "投稿", class: "btn btn-primary" %>
-          <% end %>
-            </p>
 		</div>
 		<div id="third_tab01" class="cp_tabpanel">
-		<h2>Third Tab</h2>
-		<p>Third Tab text</p>
+		<h3>見出し</h3>
+            
+            <%= f.text_field :fourth_title, size: "120x3" %>
+            
+        <h3>画像</h3>
+            <center><%= f.file_field :fourth_image %></center>
+           
+        <h3>記事</h3>
+            
+            <%= f.text_area :fourth_body, size: "120x3" %>
+            
+        <h3>リンク</h3>
+            
+            <%= f.text_field :fourth_link, size: "120x3" %>
+<br>
+<br>
+           <%= f.submit "投稿", class: "btn btn-primary" %>
 		</div>
 		<div id="force_tab01" class="cp_tabpanel">
-		<h2>Force Tab</h2>
-		<p>Force Tab text</p>
-            <% end %>
+		<h3>見出し</h3>
+            
+            <%= f.text_field :fifth_title, size: "120x3" %>
+            
+        <h3>画像</h3>
+            <center><%= f.file_field :fifth_image %></center>
+           
+        <h3>記事</h3>
+            
+            <%= f.text_area :fifth_body, size: "120x3" %>
+            
+        <h3>リンク</h3>
+            
+            <%= f.text_field :fifth_link, size: "120x3" %>
+<br>
+<br>
+           <%= f.submit "投稿", class: "btn btn-primary" %>
+		</div>
+        <div id="five_tab01" class="cp_tabpanel">
+		<h3>見出し</h3>
+            
+            <%= f.text_field :sixth_title, size: "120x3" %>
+            
+        <h3>画像</h3>
+            <center><%= f.file_field :sixth_image %></center>
+           
+        <h3>記事</h3>
+            
+            <%= f.text_area :sixth_body, size: "120x3" %>
+            
+        <h3>リンク</h3>
+            
+            <%= f.text_field :sixth_link, size: "120x3" %>
+<br>
+<br>
+           <%= f.submit "投稿", class: "btn btn-primary" %>
 		</div>
 	</div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="footer_fix_btn">
+    <%= f.submit "投稿", class: "btn btn-primary btn-lg" %>
+          <% end %>
+    <br>
+    OGI.ver by <a href="https://twitter.com/sim_niigata">オギギ＠ブログ▶︎エンジニア<i class="fab fa-twitter"></i></a>
 </div>
