--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -27,7 +27,7 @@
     <!--　１タブ　-->
 <h3><%= @post.second_title %></h3>
 <%= image_tag @post.second_image.to_s, class:"card-img"%>
-<%= @post.second_body %>
+<p><%= @post.second_body %></p>
 <a href= "<%= @post.second_link %>" ><%= @post.second_link %></a>
 <br>
     <!--　２タブ　-->
