--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,29 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>ユーザー一覧</h1>
 
 <% @users.each do |user| %>
   <hr>
-  <p><span>email: </span><%=link_to user.email, user_path(user.id) %></p>
- 
-    <% if current_user != user %>
+
+    <section class="card">
+    <%= image_tag user.picture.to_s, class:"card-img"%>
+  <div class="card-content">
+    <p class="card-text">
+
+            </p>
+  </div>
+  <div class="card-link">
+              <span>名前▼</span>
+        <br>
+      <h3><%=link_to user.username, user_path(user.id) %></h3>
+          <% if current_user != user %>
         <% if user.followed_by?(current_user) %>
             <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
         <% else %>
             <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
         <% end %>
     <% end %>
+  </div>
+</section>   
+ 
+
 
 <% end %>
