--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -18,7 +18,8 @@
   </div>
   <div class="card-link"><span>ブログ内容▼</span>
       <br>
-    <p><%= @post.body %></p>
+    <p><%= simple_format(@post.body) %>
+      </p>
   </div>
 </section> 
 
@@ -27,31 +28,31 @@
     <!--　１タブ　-->
 <h3><%= @post.second_title %></h3>
 <%= image_tag @post.second_image.to_s, class:"card-img"%>
-<p><%= @post.second_body %></p>
+<p><%= simple_format(@post.second_body) %></p>
 <a href= "<%= @post.second_link %>" ><%= @post.second_link %></a>
 <br>
     <!--　２タブ　-->
 <h3><%= @post.third_title %></h3>
 <%= image_tag @post.third_image.to_s, class:"card-img"%>
-<p><%= @post.third_body %></p>
+<p><%= simple_format(@post.third_body) %></p>
 <a href= "<%= @post.third_link %>" ><%= @post.third_link %></a>
 <br>
     <!--　３タブ　-->
 <h3><%= @post.fourth_title %></h3>
 <%= image_tag @post.fourth_image.to_s, class:"card-img"%>
-<p><%= @post.fourth_body %></p>
+<p><%= simple_format(@post.fourth_body) %></p>
 <a href= "<%= @post.fourth_link %>" ><%= @post.fourth_link %></a>
 <br>  
     <!--　４タブ　-->
 <h3><%= @post.fifth_title %></h3>
 <%= image_tag @post.fifth_image.to_s, class:"card-img"%>
-<p><%= @post.fifth_body %></p>
+<p><%= simple_format(@post.fifth_body) %></p>
 <a href= "<%= @post.fifth_link %>" ><%= @post.fifth_link %></a>
 <br>
     <!--　５タブ　-->
 <h3><%= @post.sixth_title %></h3>
 <%= image_tag @post.sixth_image.to_s, class:"card-img"%>
-<p><%= @post.sixth_body %></p>
+<p><%= simple_format(@post.sixth_body) %></p>
 <a href= "<%= @post.sixth_link %>" ><%= @post.sixth_link %></a>
 <br>
 
