--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,27 +8,27 @@
     <!--　１タブ　-->
 <h3><%= @post.second_title %></h3>
 <%= image_tag @post.second_image.to_s, class:"card-img"%>
-<p><%= @post.second_body %></p>
+<p><%= simple_format(@post.second_body) %></p>
 <a href= "<%= @post.second_link %>" ><%= @post.second_link %></a>
     <!--　２タブ　-->
 <h3><%= @post.third_title %></h3>
 <%= image_tag @post.third_image.to_s, class:"card-img"%>
-<p><%= @post.third_body %></p>
+<p><%= simple_format(@post.third_body) %></p>
 <a href= "<%= @post.third_link %>" ><%= @post.third_link %></a>
     <!--　３タブ　-->
 <h3><%= @post.fourth_title %></h3>
 <%= image_tag @post.fourth_image.to_s, class:"card-img"%>
-<p><%= @post.fourth_body %></p>
-<a href= "<%= @post.fourth_link %>" ><%= @post.fourth_link %></a>  
+<p><%= simple_format(@post.fourth_body) %></p>
+<a href= "<%= @post.fourth_link %>" ><%= @post.fourth_link %></a>
     <!--　４タブ　-->
 <h3><%= @post.fifth_title %></h3>
 <%= image_tag @post.fifth_image.to_s, class:"card-img"%>
-<p><%= @post.fifth_body %></p>
+<p><%= simple_format(@post.fifth_body) %></p>
 <a href= "<%= @post.fifth_link %>" ><%= @post.fifth_link %></a>
     <!--　５タブ　-->
 <h3><%= @post.sixth_title %></h3>
 <%= image_tag @post.sixth_image.to_s, class:"card-img"%>
-<p><%= @post.sixth_body %></p>
+<p><%= simple_format(@post.sixth_body) %></p>
 <a href= "<%= @post.sixth_link %>" ><%= @post.sixth_link %></a>
 <br>
 <% if user_signed_in? && @post.user_id == current_user.id %>
