--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
 <br>
 <br>
 <br>
-<%= link_to("プレビュー", "/posts/#{@post.id}/edit", class: "btn btn-warning") %>
+<!--<%= link_to("プレビュー", "/posts/#{@post.id}/edit", class: "btn btn-warning") %>-->
 <br>
 <br>
 <h3>投稿一覧のプレビュー▼</h3>
@@ -195,9 +195,9 @@
 <br>
 
 <div class="footer_fix_btn">
-    <%= f.submit "投稿", class: "btn btn-primary btn-lg" %>
+    <%= f.submit "投稿",class: "btn btn-primary btn-lg" %>
     <br>
-<%= link_to("プレビュー", "/posts/#{@post.id}/edit", class: "btn btn-warning pc") %>
+<!--<%= link_to("プレビュー", "/posts/#{@post.id}/edit", class: "btn btn-warning pc") %>-->
     <br>
           <% end %>
     <br>
