--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,8 +99,17 @@
     padding: 0;
 }
 
-/* 見出し */
+/* ユーザー  */
 
+
+.user img {
+  width: 80px;
+  height: 80px;
+  border-radius: 40%;
+text-align:center;
+
+  object-fit: cover;
+}
 
 /* universal */
 
@@ -274,26 +283,6 @@ footer {
 }
 
 
-/* users/index */
-
-.users{
-  margin: 0;
-  li {
-    overflow: auto;
-  }
-}
-
-.user { 
-  width: 220px;
-  padding: 20px;
-  margin-left: 30px;
-  height: 270px;
-  float: left;
-}
-
-.username {
-  font-size: 20px;
-}
 
 
 /* users/showのmicroposts表示 */
@@ -348,7 +337,45 @@ footer {
     }
 }
 
-
+/* PCリンクカード */
+    .card2 {
+        
+        width: 900px;
+        margin: 20px;
+        border-radius: 100px;
+        background-color: #fff;
+        box-shadow: 0 3px 6px #ccc;
+    }
+    .box2 {
+        display: flex;
+    }
+    .icon2 {
+        width: 48px;
+        height: 48px;
+        margin: 10px;
+        border-radius: 100px;
+        object-fit: cover;
+    }
+    .name2 {
+        font-size: 150%;
+        margin-bottom: 16px;
+        color: #888;
+    }
+    .image2 {
+        border-radius: 100px;
+        width: 80%;
+        object-fit: cover;
+    }
+    .title2 {
+        text-align:center;
+        font-size: 150%;
+        margin: 10px 0;
+        color: #444;
+    }
+    .content2 {
+        padding: 10px;
+        color: #666;
+    }
 
 
 /* リンクカード */
